--- a/server/go/src/app/public/html/room.html
+++ b/server/go/src/app/public/html/room.html
@@ -9,6 +9,14 @@
     <div id="app">
       <room></room>
     </div>
+    <script>
+      let roomId = window.location.href.split('/').reverse()[0]
+      var connection = new WebSocket('ws://' + document.domain + ':' + location.port +'/api/rooms/ws?id=' + roomId)
+      connection.onopen = function () {
+        console.log('hoge')
+        connection.send('Ping'); // Send the message 'Ping' to the server
+      };
+    </script>
     <script src="../dist/build.js"></script>
   </body>
 </html>
